--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Starter</title>
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Rubik:wght@400;600;700&display=swap" rel="stylesheet">
-  
+
 </head>
 
 <body>
@@ -14,11 +14,13 @@
   <!-- Block -->
   <section class="weather">
     <!-- Element -->
-   <video src="/video/bg.mp4" autoplay muted loop playsinline class="weather__bg"> </video>
+   <video src="/video/bg2.mp4" autoplay muted loop playsinline class="weather__bg"> </video>
    <h1 class="weather__title">Weather APP</h1>
-   <form action="@" class="weather__form">
-    <input type="text" class="weather__city">
+   <form action="" class="weather__form">
+    <input type="text" class="weather__city" value="London">
    </form>
+   <!-- Data from API -->
+   <div class="weather__data"></div>
    
   </section>
 
